-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.1, 5.6.2
-
None
-
macOS, any supported version as of 5.6.1.
-
-
38b09d34210805766afa8bdd6a1ef413447a89ed
Adding submenus to a menu on aboutToShow() doesn't work. This is because the QMenu::aboutToShow() signal is emitted way after -[QCocoaMenuDelegate menu:updateItem:atIndex:shouldCancel:], thus missing the opportunity to attach the submenu to the menu item.
See attached example.
- is duplicated by
-
QTBUG-54845 Submenus are disabled on Mac OSX with native menu after QMenu::clear()
-
- Closed
-
| For Gerrit Dashboard: QTBUG-54633 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 164671,2 | QCocoaMenu: Attach late items to their submenu | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 167659,5 | Cocoa Menus: Introducing Menurama manual test | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |