src/plugins/platforms/cocoa/qcocoamenu.h
@@ -87,6 +87,9 @@ public:
     void setAttachedItem(NSMenuItem *item);
     NSMenuItem *attachedItem() const;
 
+    bool isOpen() const;
+    void setIsOpen(bool isOpen);
+
 private:
     QCocoaMenuItem *itemOrNull(int index) const;
     void insertNative(QCocoaMenuItem *item, QCocoaMenuItem *beforeItem);
@@ -94,9 +97,10 @@ private:
     QList<QCocoaMenuItem *> m_menuItems;
     NSMenu *m_nativeMenu;
     NSMenuItem *m_attachedItem;
+    quintptr m_tag;
     bool m_enabled;
     bool m_visible;
-    quintptr m_tag;
+    bool m_isOpen;
 };
 
 QT_END_NAMESPACE
